# swiper

./: .gitignore  pyproject.toml
grafana/: dashboard.json  docker-compose.yml
swiper/: blacklist.yml  main.py  pyproject.toml  test.sh  whitelist.yml
swiper/swiper/: android.py  blacklist.yml  filters.yml  main.py  whitelist.yml
swiper/tests/: test_main.py
tests/: test_main.py
