[tool.poetry]
name = "swiper"
version = "0.1.0"
description = ""
authors = ["Arunscape <8227297+Arunscape@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.68"
aiofiles = "^22.1.0"
asyncio = "^3.4.3"
pyyaml = "^6.0"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
